@@ -9,6 +9,7 @@ Legend:
     ** Images no longer support pixel assignment or the set_pixel method.
 
     + Image slicing now creates ImageRegions
+    + Images are now displayed graphically in IPython Notebook
 
     - Renamed ImageRegion.image to .parent; the former is a deprecated alias
 
